<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/dark">

    <ImageView
        android:layout_gravity="center"
        android:background="@drawable/ic_baseline_favorite_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/donation_tv"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/reward_tv"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <Button
            android:id="@+id/pay_card"

            android:text="@string/pay_via_card"
            android:drawableStart="@drawable/ic_outline_payment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/PayButton"
            android:layout_weight="1" />
        <Button
            android:id="@+id/pay_net_banking"

            android:text="@string/pay_via_net_banking"
            android:drawableStart="@drawable/ic_baseline_account_balance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/PayButton"
            android:layout_weight="1" />
        <Button
            android:id="@+id/pay_wallet"
            android:text="@string/pay_via_wallet"
            android:drawableStart="@drawable/ic_baseline_account_balance_wallet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/PayButton"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
