<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_bg">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:background="@color/red"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/navigation_view"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation_view"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:translationZ="10dp"
            app:itemBackground="@color/black"
            app:itemIconTint="@drawable/navigation_item"
            app:itemTextColor="@drawable/navigation_item"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation_bottom_bar"/>
        <!--    <LinearLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintLeft_toLeftOf="parent"-->
        <!--        app:layout_constraintRight_toRightOf="parent">-->
        <!--        <Button-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:drawableTop="@drawable/search_anim"-->
        <!--            android:text="@string/search"-->
        <!--            android:textSize="10sp"-->
        <!--            android:gravity="bottom|center"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textAllCaps="false"-->
        <!--            />-->
        <!--    </LinearLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/dark"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_header_bg"
                android:src="@drawable/jc"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="50dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/username"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start|center_vertical"
                android:drawableStart="@drawable/person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/img_header_bg"/>
            <TextView
                android:id="@+id/email"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:drawableStart="@drawable/email"
                android:gravity="start|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/username"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/email">

                <ImageView
                    android:src="@drawable/language_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:spinnerMode="dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <Button
                android:id="@+id/logout_btn"
                android:text="@string/logout"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
